--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,15 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.110.1"
 uvicorn = "^0.29.0"
+sqlmodel = "^0.0.16"
+python-jose = "^3.3.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pyjwt = "^2.8.0"
+python-multipart = "^0.0.9"
+pydantic-settings = "^2.2.1"
+pydantic-extra-types = "^2.6.0"
+phonenumbers = "^8.13.34"
+pydantic = {extras = ["email"], version = "^2.7.0"}
 
 
 [build-system]
