--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-settings = "^2.2.1"
 pydantic-extra-types = "^2.6.0"
 phonenumbers = "^8.13.34"
 pydantic = {extras = ["email"], version = "^2.7.0"}
+firebase-admin = "^6.5.0"
 
 
 [build-system]
