WIP: firebase authentication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ firebase-admin = "^6.5.0"
 pyjwt = "^2.8.0"
 python-multipart = "^0.0.9"
 pydantic-settings = "^2.2.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
