authentication: onboard users

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyjwt = "^2.8.0"
 python-multipart = "^0.0.9"
 pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.1"
+alembic = "^1.13.1"
 
 
 [build-system]
